<resources>
    <string name="app_name">Gallery</string>
    <string name="todo">TODO</string>
    <string name="app_gallery">GALLERY PLUS</string>
    <string name="app_gallery2">Gallery Plus</string>
    <string name="ehint">Enter your Email</string>
    <string name="pwhint">Enter your Password</string>
    <string name="login">Login</string>
    <string name="forget">Forget Password?</string>
    <string name="reg">Dont have an account? Signup now</string>
    <string name="fullname">Fullname</string>
    <string name="back">Back</string>
    <string name="email">Email</string>
    <string name="pw">Password</string>
    <string name="confirmpw">Confirm Password</string>
    <string name="forgot_detail">We just need your registered email address <br>to sent your password reset instructions</br></string>
    <string name="regemail">Enter Email</string>
    <string name="send">Send</string>
    <string name="resetpw">Reset your Password</string>
    <string name="logout">Log out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Click</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse id maximus magna. Nulla facilisi.
        Morbi eros mauris, lacinia sodales scelerisque non, condimentum id quam. Aliquam erat volutpat.
        Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
        Pellentesque facilisis tellus vel libero sagittis rhoncus.
        Aliquam fermentum dolor nec elit ornare pretium. Sed et velit ut ligula placerat placerat.
        Nunc imperdiet, arcu vel aliquam commodo, elit odio pharetra enim, sed porta nunc nulla sit amet lorem. Vivamus neque lorem, mollis vel turpis quis, vulputate vulputate mi.
        Phasellus quis ex nibh. Nam nec leo quis urna placerat pellentesque.
        Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum vitae nulla et erat sollicitudin tincidunt ac ut diam.
        Integer porta consectetur ligula, sed tempor est tempus in. Aliquam et est ut arcu eleifend ullamcorper nec vitae ligula.
        Nam augue lectus, fermentum et fringilla at, porta vel nisi. In varius libero dui, non condimentum mauris viverra nec.
        Vestibulum in lorem lectus. Nunc a nisi id lorem sagittis cursus. Donec pulvinar nisi ipsum, ut tempor felis suscipit sit amet.</string>

    <string name="username">Username</string>
    <string name="Email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="fullName">Full Name</string>
    <string name="bdate">1/1/1990</string>
    <string name="Fname">Full Name</string>
    <string name="bsit">By: BSIT TEAMMANG</string>
    <string name="editProf">Edit Profile</string>
    <string name="changedp">Change Display Picture</string>
    <string name="updateprof">Update your profile</string>
    <string name="update">Update</string>
    <string name="changepw">Change Password</string>


    <!-- SETTTINGS -->

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">2.0.4.2021</string>
    <string name="about_us">About us</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://youtube.com</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://youtube.com</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://youtube.com</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="liketoaccess">APP GALLERY Would Like <br>to Access Your STORAGE</br></string>
    <string name="sharelibrary">zxczxc</string>
    <string name="createaccout">Create your Account</string>
    <string name="current_passowrd">Current passoword</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="new_password">New password</string>
    <string name="updatee">Update</string>
    <string name="welcome">Welcome!</string>


</resources>

