<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:theme="@style/PreferencesTheme">
    <PreferenceCategory android:title="General">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/key_upload_over_wifi"
            android:icon="@drawable/pref_upload2"
            android:summary="@string/summary_upload_over_wifi"
            android:title="@string/title_auto_upload" />

        <ListPreference
            android:defaultValue="3"
            android:icon="@drawable/pref_quality2"
            android:dialogTitle="@string/title_upload_quality"
            android:entries="@array/pref_upload_quality_entries"
            android:entryValues="@array/pref_upload_quality_values"
            android:key="@string/key_upload_quality"
            android:summary="@string/summary_upload_video_quality"
            android:title="@string/title_upload_quality" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
         android:selectable="false"
         android:summary="@string/summary_about" />

        <Preference
            android:key="aboutdevelopers"
            android:icon="@drawable/ic_outline_precision_manufacturing_24"
            android:title="About Developers" >
            <intent android:action="android.intent.action.VIEW"
                android:targetPackage="com.example.gallery"
                android:targetClass="com.example.gallery.Activity_developer" />

        </Preference>

        <Preference
         android:key="@string/key_send_feedback"
         android:summary="@string/summary_support"
         android:icon="@drawable/pref_feedback2"
         android:title="@string/title_send_feedback" />

        <!-- preference opens url in browser -->

        <Preference android:title="@string/privacy_policy"
        android:icon="@drawable/pref_privacy">
            <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/url_privacy" />
        </Preference>

        <Preference android:title="@string/title_terms"
        android:icon="@drawable/pret_terms">
            <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/url_terms" />
        </Preference>

        <Preference
        android:summary="@string/app_version"
        android:title="@string/title_version"
        android:icon="@drawable/pref_version"/>

        <Preference
        android:title="@string/logout"
            android:icon="@drawable/pref_logout">
            <intent android:action="android.intent.action.VIEW"
                android:targetPackage="com.example.gallery"
                android:targetClass="com.example.gallery.Login" />
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>

