<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg7"
    tools:context=".Editprofile">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/proximar"
        android:text="@string/updateprof"
        android:textColor="#B0000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updatefName"
        android:layout_width="259dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/c_input"
        android:drawableStart="@drawable/c_fname"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/proximar"
        android:hint="@string/fullname"
        android:inputType="textPersonName"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changedp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/updateUsername"
        android:layout_width="259dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/c_input"
        android:drawableStart="@drawable/c_uusername"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/proximar"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updatefName" />

    <EditText
        android:id="@+id/updateEmail"
        android:layout_width="259dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/c_input"
        android:drawableStart="@drawable/c_email"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/proximar"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateUsername" />

    <EditText
        android:id="@+id/updateAddress"
        android:layout_width="259dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/c_input"
        android:drawableStart="@drawable/c_address"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/proximar"
        android:hint="@string/address"
        android:inputType="textPersonName"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateEmail" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="#40C58C"
        android:fontFamily="@font/proximar"
        android:text="@string/update"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateAddress" />

    <Button
        android:id="@+id/btnchangepw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF5E5E"
        android:fontFamily="@font/proximar"
        android:text="@string/changepw"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdate" />

    <ImageView
        android:id="@+id/imageDP"
        android:layout_width="148dp"
        android:layout_height="137dp"
        android:layout_marginTop="68dp"
        android:src="@drawable/ic_fullname_focused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/changedp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/proximar"
        android:text="@string/changedp"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageDP" />


</androidx.constraintlayout.widget.ConstraintLayout>